# AzCops

./: .editorconfig  .env.example  .gitignore  AI_GUIDELINES.md  LICENSE  Makefile  README.md  docker-compose.yml
.claude/: launch.json
.github/: pull_request_template.md
.github/workflows/: ci-api.yml  ci-ui.yml  security-scan.yml  terraform-apply.yml  terraform-plan.yml
docs/: PHASE_1_2_COMPLETION.md
docs/architecture/: AZURE_ARCHITECTURE.md
docs/runbooks/: github-oidc.md
infra/scripts/: bootstrap-spn.sh  (+1 more)
src/api/: Dockerfile  alembic.ini  pyproject.toml
src/api/alembic/: env.py
src/api/app/: main.py
src/api/app/core/: config.py  database.py  dependencies.py  logging.py  security.py
src/api/app/engine/: base.py  runner.py
src/api/app/engine/rules/: __init__.py  governance.py  rate_optimization.py  rightsizing.py  waste.py
src/api/app/middleware/: correlation.py  request_logging.py
src/api/app/models/: __init__.py  audit_log.py  base.py  cost.py  recommendation.py  resource.py  subscription.py  tenant.py
src/api/app/repositories/: base.py  cost.py  recommendation.py  resource.py  subscription.py  tenant.py
src/api/app/routers/: __init__.py  costs.py  health.py  ingestion.py  recommendations.py  resources.py  subscriptions.py  tenants.py
src/api/app/schemas/: common.py  cost.py  recommendation.py  resource.py  subscription.py  tenant.py
src/api/app/services/: recommendation_service.py  subscription_service.py  tenant_service.py
src/api/tests/: conftest.py  test_health.py  test_models.py  test_subscriptions.py  test_tenants.py
(+91 files in other folders)
