[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azcops-api"
version = "0.1.0"
description = "Azure Enterprise Cost Optimization Platform - API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "azure-identity>=1.17.0",
    "azure-mgmt-costmanagement>=4.0.0",
    "azure-mgmt-resource>=23.1.0",
    "azure-mgmt-advisor>=9.0.0",
    "azure-mgmt-resourcegraph>=8.0.0",
    "azure-monitor-query>=1.3.0",
    "azure-storage-file-datalake>=12.15.0",
    "python-jose[cryptography]>=3.3.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "aiosqlite>=0.20.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
